--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build image
-        run: sudo docker compose --env-file .env build
+      - name: Build and pull image
+        run: |
+          sudo docker compose --env-file .env build
+          sudo docker pull caddy:latest
         
       - name: Save image
         run: |
