Fix Caddy permission issues in development, add index endpoint tests to http-files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,8 +13,7 @@ services:
     container_name: coinmon-proxy
     ports:
       - "80:80"
-    volumes:
-      - ./Caddyfile.dev:/etc/caddy/Caddyfile
+    command: caddy reverse-proxy --from :80 --to api:8080
     depends_on:
       - api
     networks:
